fix(queryPage): add title truncate, fix workitem cell css

--- a/src/app/components_ngrx/planner-query/planner-query.component.less
+++ b/src/app/components_ngrx/planner-query/planner-query.component.less
@@ -34,3 +34,7 @@
 .current-query {
   color: @color-pf-blue-500;
 }
+
+work-item-cell {
+  max-width: ~'calc(e("100% - 20px"))';
+}
